--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build": "expo export -p web",
-    "serve": "serve dist"
+    "serve": "http-server dist"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.1.1",
@@ -40,7 +40,7 @@
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2",
-    "serve": "^14.2.1"
+    "http-server": "^14.1.1"
   },
   "private": true,
   "engines": {
